--- a/style.css
+++ b/style.css
@@ -381,7 +381,7 @@ nav .fa{
 .calendarHeader{
     min-height: 300px;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.6),rgba(4,9,30,0.6)),url(header/calendar.JPG);
+    background-image: linear-gradient(rgba(4,9,30,0.6),rgba(4,9,30,0.6)),url(header/calendar.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
